@@ -129,6 +129,7 @@ IF(NOT WIN32 AND NOT APPLE)
     MACRO_OPTIONAL_FIND_PACKAGE(X11)   # For AdvancedSlideshow and ImageViewer.
 ENDIF(NOT WIN32 AND NOT APPLE)
 
+# Check KDcraw version installed to compile fine.
 IF(NOT WIN32)
     FIND_PACKAGE(PkgConfig)
     # Check KDcraw version.
@@ -140,6 +141,19 @@ IF(NOT WIN32)
     ENDIF(Kdcraw_FOUND)
 ELSE(NOT WIN32)
     SET(KDCRAW_FOR_KIPIPLUGINS TRUE)
+ENDIF(NOT WIN32)
+
+# Check KExiv2 version installed to compile fine.
+IF(NOT WIN32)
+    FIND_PACKAGE(PkgConfig)
+    PKG_CHECK_MODULES(Kexiv2 libkexiv2>=1.1.0)
+    IF(Kexiv2_FOUND)
+        SET(KEXIV2_FOR_KIPIPLUGINS TRUE)
+    ELSE(Kexiv2_FOUND)
+        SET(KEXIV2_FOR_KIPIPLUGINS FALSE)
+    ENDIF(Kexiv2_FOUND)
+ELSE(NOT WIN32)
+    SET(KEXIV2_FOR_KIPIPLUGINS TRUE)
 ENDIF(NOT WIN32)
 
 # OpenMP detection requires CMake >= 2.6.3
@@ -188,6 +202,7 @@ PRINT_OPTIONAL_LIBRARY_STATUS("Gdk" GDK_FOUND)
 PRINT_OPTIONAL_LIBRARY_STATUS("libkdepim" KDEPIMLIBS_FOUND)
 PRINT_OPTIONAL_LIBRARY_STATUS("qca2" QCA2_FOUND)
 PRINT_OPTIONAL_LIBRARY_STATUS("libkdcraw >= 1.1.0" KDCRAW_FOR_KIPIPLUGINS)
+PRINT_OPTIONAL_LIBRARY_STATUS("libkexiv2 >= 1.1.0" KEXIV2_FOR_KIPIPLUGINS)
 
 IF(OPENMP_VERSION_CMAKE)
     PRINT_OPTIONAL_LIBRARY_STATUS("OpenMP" OPENMP_FOUND)
@@ -204,15 +219,15 @@ PRINT_OPTIONAL_LIBRARY_STATUS("libksane" KSANE_FOUND)
 
 MESSAGE(STATUS "")
 
-IF(JPEG_FOUND AND PNG_FOUND AND TIFF_FOUND AND KDCRAW_FOR_KIPIPLUGINS AND KEXIV2_FOUND AND KIPI_FOUND)
+IF(JPEG_FOUND AND PNG_FOUND AND TIFF_FOUND AND KDCRAW_FOR_KIPIPLUGINS AND KEXIV2_FOR_KIPIPLUGINS AND KIPI_FOUND)
     SET(KIPI_COMPILE_MESSAGE "kipi-plugins will be compiled")
     FILL_WITH_DOTS(KIPI_COMPILE_MESSAGE)
     MESSAGE(STATUS " ${KIPI_COMPILE_MESSAGE} YES")
     SET(KIPIPLUGINS_CAN_BE_COMPILED true)
-ELSE(JPEG_FOUND AND PNG_FOUND AND TIFF_FOUND AND KDCRAW_FOR_KIPIPLUGINS AND KEXIV2_FOUND AND KIPI_FOUND)
+ELSE(JPEG_FOUND AND PNG_FOUND AND TIFF_FOUND AND KDCRAW_FOR_KIPIPLUGINS AND KEXIV2_FOR_KIPIPLUGINS AND KIPI_FOUND)
     MESSAGE(FATAL_ERROR " kipi-plugins will not be compiled! Look README file for more details about dependencies...")
     SET(KIPIPLUGINS_CAN_BE_COMPILED false)
-ENDIF(JPEG_FOUND AND PNG_FOUND AND TIFF_FOUND AND KDCRAW_FOR_KIPIPLUGINS AND KEXIV2_FOUND AND KIPI_FOUND)
+ENDIF(JPEG_FOUND AND PNG_FOUND AND TIFF_FOUND AND KDCRAW_FOR_KIPIPLUGINS AND KEXIV2_FOR_KIPIPLUGINS AND KIPI_FOUND)
 
 PRINT_PLUGIN_COMPILE_STATUS("Shwup" QCA2_FOUND)
 PRINT_PLUGIN_COMPILE_STATUS("HtmlExport" LIBXML2_FOUND AND LIBXSLT_FOUND)
@@ -226,11 +241,10 @@ ELSE(NOT WIN32 AND NOT APPLE)
 ENDIF(NOT WIN32 AND NOT APPLE)
 
 PRINT_PLUGIN_COMPILE_STATUS("AcquireImages" KSANE_FOUND)
-PRINT_PLUGIN_COMPILE_STATUS("DNGConverter" EXPAT_FOUND AND KDCRAW_FOR_KIPIPLUGINS)
+PRINT_PLUGIN_COMPILE_STATUS("DNGConverter" EXPAT_FOUND)
 PRINT_PLUGIN_COMPILE_STATUS("RemoveRedEyes" OPENCV_FOUND)
 PRINT_PLUGIN_COMPILE_STATUS("IpodExport" GPOD_FOUND AND GLIB2_FOUND AND GOBJECT_FOUND AND GDK_FOUND)
 PRINT_PLUGIN_COMPILE_STATUS("Calendar" KDEPIMLIBS_FOUND)
-PRINT_PLUGIN_COMPILE_STATUS("ExposureBlending" KDCRAW_FOR_KIPIPLUGINS)
 
 MESSAGE(STATUS "----------------------------------------------------------------------------------")
 MESSAGE(STATUS "")
