@@ -3,6 +3,7 @@ Kipi-plugins 1.3.0 - Release date: 30/05/2010
 
 NEW FEATURES:
 
+General              : libkexiv2 dependency set to 1.1.0 release.
 General              : libkdcraw dependency set to 1.1.0 release.
 DNGConverter         : Update Adobe DNG sdk to 1.3.0.
 
